--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,19 @@
 {
-  "extends": ["plugin:@nrwl/nx/react", "./.eslintrc.base.json"],
+  "extends": ["./.eslintrc.base.json", "airbnb", "airbnb-typescript"],
   "ignorePatterns": ["!**/*"],
   "overrides": [
     {
       "files": ["*.ts", "*.tsx"],
-      "rules": {}
+      "parserOptions": {
+        "project": ["./tsconfig.*?.json"]
+      },
+      "rules": {
+        "import/extensions": 0,
+        "import/no-extraneous-dependencies": 0,
+        "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
+        "react/react-in-jsx-scope": 0,
+        "@typescript-eslint/comma-dangle": 0
+      }
     },
     {
       "files": ["*.js", "*.jsx"],
