--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,10 @@
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "types": ["vite/client", "vitest"]
+    "types": ["vite/client", "vitest"],
+    "paths": {
+      "@otterly-outstanding/core": ["core/src/index.ts"]
+    }
   },
   "files": [],
   "include": [],
